src/tsv/cli/snapshots/annonars__tsv__cli__query__test__smoke_query_range_find_first.snap
---
source: src/tsv/cli/query.rs
assertion_line: 427
expression: "&out_data"
---
{"CHROM":"chr1","POS":1000,"REF":"A","ALT":"T","payload":0.1}

