src/tsv/cli/snapshots/annonars__tsv__cli__query__test__smoke_query_range_find_second.snap
---
source: src/tsv/cli/query.rs
expression: "&out_data"
---
{"CHROM":"chr1","POS":1001,"REF":"A","ALT":"T","payload":0.2}

